--- a/css/jquery.modale.less
+++ b/css/jquery.modale.less
@@ -1,12 +1,25 @@
-.modale-wrapper {
-	display: none;
-}
-
 .modale {
-	display: none;
 	position: absolute;
 	top: 50%;
 	left: 50%;
+}
+
+.modale-wrapper {
+	width: 100%;
+	height: 100%;
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.modale-overlay {
+	background-color: #000;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .foo {
