Corrected heights problem.

--- a/css/jquery.modale.less
+++ b/css/jquery.modale.less
@@ -32,6 +32,8 @@
 
 .modale-header {
 	background-color: #eee;
+	height: 50px;
+	max-height: 50px;
 	border-radius: 10px 10px 0 0;
 }
 
@@ -42,6 +44,8 @@
 
 .modale-footer {
 	background-color: #eee;
+	height: 40px;
+	max-height: 40px;
 	border-radius: 0 0 10px 10px;
 }
 
