Trying out support for customizing CSS.

--- a/css/override.less
+++ b/css/override.less
@@ -1,6 +1,14 @@
 .foo {
 	width: 600px;
 	height: 400px;
+	font-family: arial, sans-serif;
+}
+
+.foo .modale-header,
+.foo .modale-footer {
+	background-color: #000;
+	color: #fff;
+	opacity: 0.5;
 }
 
 .bar {
