--- a/css/override.css
+++ b/css/override.css
@@ -1,6 +1,13 @@
 .foo {
   width: 600px;
   height: 400px;
+  font-family: arial, sans-serif;
+}
+.foo .modale-header,
+.foo .modale-footer {
+  background-color: #000;
+  color: #fff;
+  opacity: 0.5;
 }
 .bar {
   width: 800px;
