Some CSS stuff.

--- a/css/jquery.modale.css
+++ b/css/jquery.modale.css
@@ -1,9 +1,10 @@
 .modale {
   background-color: transparent;
+  font-family: arial, sans-serif;
+  border-radius: 10px;
   position: absolute;
   top: 50%;
   left: 50%;
-  border-radius: 10px;
 }
 .modale-wrapper {
   width: 100%;
