--- a/css/jquery.modale.less
+++ b/css/jquery.modale.less
@@ -1,9 +1,11 @@
 .modale {
 	background-color: transparent;
+	border-radius: 10px;
+	font-family: arial, sans-serif;
+	border-radius: 10px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	border-radius: 10px;
 }
 
 .modale-wrapper {
