--- a/css/override.less
+++ b/css/override.less
@@ -1,7 +1,8 @@
 .foo {
+	// background-color: #fff;
 	width: 600px;
 	height: 400px;
-	font-family: arial, sans-serif;
+	border: 2px solid #000;
 }
 
 .foo .modale-header,
